added text in p tag

--- a/playpart.html
+++ b/playpart.html
@@ -5,43 +5,32 @@
 </head>
 <body>
 <h1>Akash Gadiparthi acts in a play</h1>
-<h5>Ghosts Act 1</h5>
-<h5>Author: Henrik Ibsen</h5>
+<h4>Ghosts Act 1</h4>
+<h4>Author: Henrik Ibsen</h4>
 <p>
-    [A spacious garden-room, with one door to the left, and two doors to the
-    right. In the middle of the room a round table, with chairs about it. On
-    the table lie books, periodicals, and newspapers. In the foreground to
-    the left a window, and by it a small sofa, with a worktable in front of
-    it. In the background, the room is continued into a somewhat narrower
-    conservatory, the walls of which are formed by large panes of glass. In
-    the right-hand wall of the conservatory is a door leading down into
-    the garden. Through the glass wall a gloomy fjord landscape is faintly
-    visible, veiled by steady rain.]
+    <h5>ENGSTRAND.</h5> <p>Asleep? In the middle of the day?</p>
     
 </p>
 <p>
-    [ENGSTRAND, the carpenter, stands by the garden door. His left leg
-    is somewhat bent; he has a clump of wood under the sole of his boot.
-    REGINA, with an empty garden syringe in her hand, hinders him from
-    advancing.]
+    <h5>REGINA.</h5> <p>It's no business of yours.</p>
 </p>
 <p>
-    REGINA. [In a low voice.] What do you want? Stop where you are. You're
+    <h5>REGINA.</h5> <P>[In a low voice.]</P> What do you want? Stop where you are. You're
     positively dripping.
 </p>
 <p>
-    ENGSTRAND. It's the Lord's own rain, my girl.
+    <h5>ENGSTRAND.</h5> <p>It's the Lord's own rain, my girl.</p>
 </p>
 <p>
-    REGINA. It's the devil's rain, _I_ say.
+    <h5>REGINA.</h5> <P>It's the devil's rain, _I_ say.</P>
 </p>
 <p>
-    ENGSTRAND. Lord, how you talk, Regina. [Limps a step or two forward into
-    the room.] It's just this as I wanted to say--
+    <h5>ENGSTRAND.</h5> <P>Lord, how you talk, Regina.</P> <P>[Limps a step or two forward into
+    the room.]</P> It's just this as I wanted to say--
 </p>
 <p>
-    REGINA. Don't clatter so with that foot of yours, I tell you! The young
-    master's asleep upstairs.
+    <h5>MANDERS.</h5> <p>Don't clatter so with that foot of yours, I tell you! The young
+    master's asleep upstairs.</p>
 </p>
 </body>
 </html>
