added classes to text

--- a/playpart.html
+++ b/playpart.html
@@ -3,33 +3,34 @@
 <head>
 <title>Webapps Lab4 html with css</title>
 </head>
+<link rel="stylesheet" type="text/css" href="ibsen.css"/>
 <body>
 <h1>Akash Gadiparthi acts in a play</h1>
 <h4>Ghosts Act 1</h4>
 <h4>Author: Henrik Ibsen</h4>
 <p>
-    <h5>ENGSTRAND.</h5> <p>Asleep? In the middle of the day?</p>
+    <h5 class="ENGSTRAND">ENGSTRAND.</h5> <p class="speech">Asleep? In the middle of the day?</p>
     
 </p>
 <p>
-    <h5>REGINA.</h5> <p>It's no business of yours.</p>
+    <h5 class="REGINA">REGINA.</h5> <p class="speech">It's no business of yours.</p>
 </p>
 <p>
-    <h5>REGINA.</h5> <P>[In a low voice.]</P> What do you want? Stop where you are. You're
-    positively dripping.
+    <h5 class="REGINA">REGINA.</h5> <P class="direction">[In a low voice.]</P> <p class="speech">What do you want? Stop where you are. You're
+    positively dripping.</p>
 </p>
 <p>
-    <h5>ENGSTRAND.</h5> <p>It's the Lord's own rain, my girl.</p>
+    <h5 class="ENGSTRAND">ENGSTRAND.</h5> <p class="speech">It's the Lord's own rain, my girl.</p>
 </p>
 <p>
-    <h5>REGINA.</h5> <P>It's the devil's rain, _I_ say.</P>
+    <h5 class="REGINA">REGINA.</h5> <P class="speech">It's the devil's rain, _I_ say.</P>
 </p>
 <p>
-    <h5>ENGSTRAND.</h5> <P>Lord, how you talk, Regina.</P> <P>[Limps a step or two forward into
-    the room.]</P> It's just this as I wanted to say--
+    <h5 class="ENGSTRAND">ENGSTRAND.</h5> <P class="speech">Lord, how you talk, Regina.</P> <P class="direction">[Limps a step or two forward into
+    the room.]</P> <P class="speech">It's just this as I wanted to say--</P>
 </p>
 <p>
-    <h5>MANDERS.</h5> <p>Don't clatter so with that foot of yours, I tell you! The young
+    <h5 class="MANDERS">MANDERS.</h5> <p class="speech">Don't clatter so with that foot of yours, I tell you! The young
     master's asleep upstairs.</p>
 </p>
 </body>
