added styles and commited

--- a/playpart.html
+++ b/playpart.html
@@ -33,5 +33,29 @@
     <h5 class="MANDERS">MANDERS.</h5> <p class="speech">Don't clatter so with that foot of yours, I tell you! The young
     master's asleep upstairs.</p>
 </p>
+<table>
+    <tr>
+      <th>Character</th>
+      <th>Actor</th>
+      <th>Understudy</th>
+    </tr>
+    <tr>
+      <td>ENGSTRAND</td>
+      <td>Lin Yi</td>
+      <td>Put your head on my shoulder</td>
+    <tr>
+       <td>REGINA</td>
+       <td>Lee Min ho</td>
+       <td>The Heirs</td>  
+    </tr>
+    <tr>
+        <td>MANDERS</td>
+        <td>Tom Cruise</td>
+        <td>Mission Impossible</td>  
+     </tr>
+  </table>
+  <hr>
+  <hr>
+     <a href="secondact.html" target="_blank">Click here for secondact</a>
 </body>
 </html>
