--- a/playpart.html
+++ b/playpart.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Webapps Lab4 html with css</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <link rel="stylesheet" type="text/css" href="ibsen.css"/>
 <body>
@@ -57,5 +58,18 @@
   <hr>
   <hr>
      <a href="secondact.html" target="_blank">Click here for secondact</a>
+  <hr>  
+  <p>Google Communication Icons</p>
+  <i class="material-icons" style="font-size: 45px;color:red;">business</i>
+  <i class="material-icons" style="font-size:36px;color: chocolate;">chat</i>
+  <i class="material-icons" style="font-size:48px;color: blue;">contact_phone</i>
+  <br>
+  <img src="google.jpg" atl="Icons" style="width: 300px; height:300px;">
+  <br>
+  <ul class="navbar-horizontal">
+    <li> <a href="playpart.html">First</a></li>
+    <li> <a href="secondact.html">Second</a></li>
+  </ul>
+
 </body>
 </html>
