--- a/secondact.html
+++ b/secondact.html
@@ -17,6 +17,28 @@
 <h4 class="MANDERS">MANDERS</h4>
 <p class="speech">Curse me, now, if ever I used such an ugly word.</p>
 <hr>
+<table>
+    <tr>
+      <th>Character</th>
+      <th>Actor</th>
+      <th>Understudy</th>
+    </tr>
+    <tr>
+      <td>ENGSTRAND</td>
+      <td>Lin Yi</td>
+      <td>Put your head on my shoulder</td>
+    <tr>
+       <td>REGINA</td>
+       <td>Lee Min ho</td>
+       <td>The Heirs</td>  
+    </tr>
+    <tr>
+        <td>MANDERS</td>
+        <td>Tom Cruise</td>
+        <td>Mission Impossible</td>  
+     </tr>
+</table>
+  <hr>
 <a href="playpart.html" target="_blank">Click for playpart act</a>
 </body>
 </html>
